Maps rendering fix on mobile

--- a/theme/_css/skeleton.less
+++ b/theme/_css/skeleton.less
@@ -123,6 +123,7 @@
 		.container .article-community.mobile 		{ display: block; }
 		.container .article-community.stable 		{ display: none !important; }
 		.container .sharebox 						{ left: 300px; }
+		.container article iframe 					{ max-width: 294px !important; }
     }
 
 /* #Mobile (Landscape)
@@ -147,6 +148,7 @@
 		.container .footer-box.section-front		{ margin-left: 0px; width: 410px; }
 		.container .footer-sections					{ width: 440px !important; margin-bottom: 20px; }
 		.container .sharebox 						{ left: 220px; }
+		.container article iframe 					{ max-width: 440px !important; }
     }
 
 
